@@ -1,5 +1,6 @@
 package tools.jackson.databind.cfg;
 
+import java.io.Serial;
 import java.util.*;
 
 import com.fasterxml.jackson.annotation.JsonAutoDetect;
@@ -17,6 +18,7 @@ public class ConfigOverrides
     implements java.io.Serializable,
         Snapshottable<ConfigOverrides>
 {
+    @Serial
     private static final long serialVersionUID = 4L;
 
     /**
@@ -284,7 +286,7 @@ public class ConfigOverrides
             TreeMap<String, MutableConfigOverride> sorted = new TreeMap<>();
             _overrides.forEach((k, v) -> sorted.put(k.getName(), v));
             sorted.forEach((k, v) -> {
-                sb.append(String.format("'%s'->%s", k, v));
+                sb.append("'%s'->%s".formatted(k, v));
             });
             sb.append("}");
         }
