@@ -464,8 +464,7 @@ public abstract class SettableBeanProperty
      */
     public int getCreatorIndex() {
         // changed from 'return -1' in 2.7.9 / 2.8.7
-        throw new IllegalStateException(String.format(
-                "Internal error: no creator index for property '%s' (of type %s)",
+        throw new IllegalStateException("Internal error: no creator index for property '%s' (of type %s)".formatted(
                 this.getName(), getClass().getName()));
     }
 
