@@ -1,5 +1,6 @@
 package tools.jackson.databind.exc;
 
+import java.io.Serial;
 import java.util.Collections;
 import java.util.List;
 
@@ -45,6 +46,7 @@ import tools.jackson.databind.DatabindException;
  * @since 3.1
  */
 public class DeferredBindingException extends DatabindException {
+    @Serial
     private static final long serialVersionUID = 1L;
 
     private final List<CollectedProblem> problems;
@@ -86,11 +88,10 @@ public class DeferredBindingException extends DatabindException {
         }
 
         String limitNote = limitReached ? " (limit reached; more errors may exist)" : "";
-        return String.format(
-            "%d deserialization problems%s (showing first 5):%n%s",
-            count,
-            limitNote,
-            formatProblems(problems)
+        return "%d deserialization problems%s (showing first 5):%n%s".formatted(
+                count,
+                limitNote,
+                formatProblems(problems)
         );
     }
 
@@ -99,11 +100,11 @@ public class DeferredBindingException extends DatabindException {
         int limit = Math.min(5, problems.size());
         for (int i = 0; i < limit; i++) {
             CollectedProblem p = problems.get(i);
-            sb.append(String.format("  [%d] at %s: %s%n",
-                i + 1, p.getPath(), p.getMessage()));
+            sb.append("  [%d] at %s: %s%n".formatted(
+                    i + 1, p.getPath(), p.getMessage()));
         }
         if (problems.size() > 5) {
-            sb.append(String.format("  ... and %d more", problems.size() - 5));
+            sb.append("  ... and %d more".formatted(problems.size() - 5));
         }
         return sb.toString();
     }
