@@ -590,8 +590,7 @@ public class POJOPropertyBuilder
         // Otherwise
         String desc = conflicts.stream().map(AnnotatedMethod::getFullName)
                 .collect(Collectors.joining(" vs "));
-        throw new IllegalArgumentException(String.format(
-                "Conflicting setter definitions for property \"%s\": %s",
+        throw new IllegalArgumentException("Conflicting setter definitions for property \"%s\": %s".formatted(
                 getName(), desc));
     }
 
@@ -1008,7 +1007,16 @@ public class POJOPropertyBuilder
             if (parent != null) {
                 parent._collectIgnorals(getName());
                 for (PropertyName pn : findExplicitNames()) {
-                    parent._collectIgnorals(pn.getSimpleName());
+                    String simpleName = pn.getSimpleName();
+                    // [databind#5975]: Skip ignoral when the explicit name is owned
+                    // by a sibling creator parameter; that creator is a legitimate
+                    // write target despite this accessor being READ_ONLY. The
+                    // companion case (a creator parameter renamed to a name that
+                    // was already ignored) is handled by the [databind#2118] rescue
+                    // in POJOPropertiesCollector._renameProperties.
+                    if (!parent.hasCreatorBoundProperty(simpleName)) {
+                        parent._collectIgnorals(simpleName);
+                    }
                 }
             }
             // Remove setters, creators for sure, but fields too if deserializing
@@ -1668,7 +1676,7 @@ public class POJOPropertyBuilder
 
         @Override
         public String toString() {
-            String msg = String.format("%s[visible=%b,ignore=%b,explicitName=%b]",
+            String msg = "%s[visible=%b,ignore=%b,explicitName=%b]".formatted(
                     value.toString(), isVisible, isMarkedIgnored, isNameExplicit);
             if (next != null) {
                 msg = msg + ", "+next.toString();
