@@ -293,7 +293,7 @@ public abstract class TypeDeserializerBase
             extraDesc = "known type ids = " + extraDesc;
         }
         if (_property != null) {
-            extraDesc = String.format("%s (for POJO property '%s')", extraDesc,
+            extraDesc = "%s (for POJO property '%s')".formatted(extraDesc,
                     _property.getName());
         }
         return ctxt.handleUnknownTypeId(_baseType, typeId, _idResolver, extraDesc);
