@@ -1,5 +1,6 @@
 package tools.jackson.databind.ser;
 
+import java.io.Serial;
 import java.util.*;
 
 import com.fasterxml.jackson.annotation.*;
@@ -57,6 +58,7 @@ public class BeanSerializerFactory
     extends BasicSerializerFactory
     implements java.io.Serializable
 {
+    @Serial
     private static final long serialVersionUID = 3;
 
     /**
@@ -488,9 +490,8 @@ public class BeanSerializerFactory
 
             for (int i = 0, len = props.size() ;; ++i) {
                 if (i == len) {
-                    throw new IllegalArgumentException(String.format(
-"Invalid Object Id definition for %s: cannot find property with name %s",
-ClassUtil.getTypeDescription(beanDescRef.getType()), ClassUtil.name(propName)));
+                    throw new IllegalArgumentException("Invalid Object Id definition for %s: cannot find property with name %s".formatted(
+                            ClassUtil.getTypeDescription(beanDescRef.getType()), ClassUtil.name(propName)));
                 }
                 BeanPropertyWriter prop = props.get(i);
                 if (propName.equals(prop.getName())) {
