@@ -293,7 +293,7 @@ public class DatabindTestUtil
 
         @Override
         public String toString() {
-            return String.format("[x=%d, y=%d]", x, y);
+            return "[x=%d, y=%d]".formatted(x, y);
         }
     }
 
